--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,8 @@
 
 name: "Build"
 on:
+  workflow_dispatch:
+  
   push:
     # main is left just for emergency cases.
     branches: [ main ]
@@ -11,7 +13,7 @@ on:
     branches: [ main ]
 
 env:
-  JDK_VERSION: 16
+  JDK_VERSION: 20
   JDK_DISTRO: 'temurin'
 jobs:
   analyze_sources:
